<resources>
    <string name="app_name">Zhu-趣天气</string>

    <string name="common_error_net">网络异常,请检查网络连接！</string>
    <string name="common_error_net_time_out">网络超时</string>
    <string name="common_error_do_something_fail">操作异常</string>
    <string name="common_error_request">请求错误</string>
    <string name="common_error_server">服务器错误</string>
    <string name="common_error_server_json">服务器错误:Json格式错误</string>

    <string name="loading">加载中</string>


    <string name="location">定位</string>
    <string name="share">分享</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Long">|</string>
    <string name="forecast">预报</string>
    <string name="todo">TODO</string>
    <string name="live_grade">生活指数</string>
    <string name="cold">感冒</string>
    <string name="dress">穿衣</string>
    <string name="light">实时紫外线</string>
    <string name="car_wash">洗车</string>

    <string name="city">城市</string>
    <string name="addSite">添加城市</string>
    <string name="compileSite">编辑城市</string>
    <string name="input_site">请输入城市进行搜索</string>
    <string name="place_account">请输入数字账号</string>
    <string name="place_password">请输入密码</string>
    <string name="Login">登       录</string>
    <string name="place_register">去注册</string>
    <string name="facilityCollect">设备收藏</string>
    <string name="quitLogin">退出登录</string>
    <string name="SiteRegulate">地址管理</string>
    <string name="pushRegulate">推送管理</string>
    <string name="opinionFeedback">意见反馈</string>
    <string name="aboutMe">关于我们</string>
    <string name="comingSon">敬请期待</string>
    <string name="number">账号:</string>
    <string name="name">昵称:</string>
    <string name="phone">1312312313</string>
    <string name="email">邮箱:</string>
    <string name="password">密码</string>
    <string name="btUpdate">确定修改</string>
    <string name="btLocationData">点击数据地址</string>
    <string name="push_inform">发送通知</string>
    <string name="placeText">请输入内容</string>
    <string name="submit">提交</string>

</resources>