<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="#F8F8F8"
    android:layout_height="match_parent">
    <View
        app:layout_constraintTop_toTopOf="parent"
        android:background="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="22dp"/>
    <RelativeLayout
        android:id="@+id/rlTop"
        android:elevation="1dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="100dp">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivPortrait"
            android:layout_margin="8dp"
            android:src="@drawable/ic_launcher_foreground"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvName"
            tools:text="姓名"
            android:textSize="18sp"
            android:layout_marginTop="30dp"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="16dp"
            android:layout_toEndOf="@id/ivPortrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvNumber"
            tools:text="账号"
            android:textSize="15sp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_alignBottom="@id/ivPortrait"
            android:layout_toEndOf="@id/ivPortrait"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </RelativeLayout>
    <LinearLayout
        android:id="@+id/rlMiddle"
        android:elevation="1dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintTop_toBottomOf="@id/rlTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <LinearLayout
            android:elevation="1dp"
            android:background="@color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvFacilityCollect"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:paddingBottom="12dp"
                android:text="@string/facilityCollect"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:background="@color/bgColorThird"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSiteRegulate"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:paddingBottom="12dp"
                android:text="@string/SiteRegulate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/white"
            android:elevation="1dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPushRegulate"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:paddingBottom="12dp"
                android:text="@string/pushRegulate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:background="@color/bgColorThird"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvOpinionFeedback"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:paddingBottom="12dp"
                android:text="@string/opinionFeedback"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <LinearLayout
            android:background="@color/white"
            android:elevation="1dp"
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAboutMe"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:paddingBottom="12dp"
                android:text="@string/aboutMe"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
            <View
                android:background="@color/bgColorThird"
                android:layout_width="match_parent"
                android:layout_height="1dp"/>
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvComingSon"
                android:paddingTop="12dp"
                android:paddingStart="12dp"
                android:paddingEnd="0dp"
                android:paddingBottom="12dp"
                android:text="@string/comingSon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        android:background="@color/white"
        android:layout_marginTop="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rlMiddle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="horizontal">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btBackLogin"
            android:textColor="@color/white"
            android:text="@string/quitLogin"
            android:layout_marginTop="50dp"
            android:background="@color/blue"
            android:layout_marginEnd="18sp"
            android:layout_marginStart="18dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btLogin"
            android:visibility="gone"
            android:textColor="@color/white"
            android:text="@string/Login"
            android:layout_marginTop="50dp"
            android:background="@color/blue"
            android:layout_marginEnd="18sp"
            android:layout_marginStart="18dp"
            android:layout_width="match_parent"
            android:layout_height="30dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>