<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="?android:attr/actionBarSize"/>

    <androidx.appcompat.widget.AppCompatImageView
        app:layout_constraintBottom_toBottomOf="@id/tv_account"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_launcher_foreground" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_account"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_bg_search"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="16dp"
        android:hint="@string/place_account"
        android:inputType="number"
        android:singleLine="true"
        android:maxLength="11"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/tv_password"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/shape_bg_search"
        android:drawableStart="@drawable/ic_user"
        android:drawablePadding="16dp"
        android:hint="@string/place_password"
        android:inputType="textPassword"
        android:maxLength="11"
        android:paddingStart="24dp"
        android:paddingEnd="24dp"
        android:singleLine="true"
        android:imeOptions="actionDone"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_account" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_password_or"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:src="@drawable/ic_password_hide"
        app:layout_constraintBottom_toBottomOf="@id/tv_password"
        app:layout_constraintEnd_toEndOf="@id/tv_password"
        app:layout_constraintTop_toTopOf="@id/tv_password" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_registered"
        android:layout_width="0dp"
        android:layout_height="35dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/blue_bg_search"
        tools:text="@string/Login"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintEnd_toEndOf="@id/tv_password"
        app:layout_constraintStart_toStartOf="@id/tv_password"
        app:layout_constraintBottom_toBottomOf="@id/guideline" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/iv_login"
        android:visibility="invisible"
        android:text="@string/place_register"
        android:gravity="center"
        android:paddingStart="5dp"
        android:paddingEnd="0dp"
        android:textSize="16sp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="@id/gl_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        android:layout_width="0dp"
        android:layout_height="30dp"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.8" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7" />

</androidx.constraintlayout.widget.ConstraintLayout>